test/invalid/41625_ArgumentsToMethodCall/B.plume

class B extends A is 
